# recon

./: .env.example  .gitignore  GUIDE.md  LICENSE  README.md  pyproject.toml
scripts/: debug_tiers.py  generate_pareto_data.py  run_benchmark.py  summarize_completed.py  verify_llmlingua.py
src/recon/: __init__.py  graph.py  middleware.py  mutator.py  parser.py  server.py
tests/: scratch_inspect.py  test_recon.py
tests/dummy_repo/: module_a.py  module_b.py  pytest.ini
