[project]
name = "recon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Val Kotlarov Hoffman", email = "val.hoffman@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "datasets>=5.0.0",
    "fastmcp",
    "tree-sitter",
    "tree-sitter-python",
]

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"
